A lot of changes

--- a/src/resources/styles/blocks/_footer.scss
+++ b/src/resources/styles/blocks/_footer.scss
@@ -1,7 +1,6 @@
 footer {
   bottom: 0;
-  background-color: $color-black;
-  color: $color-white;
+  background-color: $color-background-header;
   display: inline-block;
   height: 2rem;
   line-height: 2rem;
