--- a/src/views/Form/templates/FormView.hbs
+++ b/src/views/Form/templates/FormView.hbs
@@ -1,17 +1,3 @@
-<header>
-  <div class="icon"></div>
-  <ul class="nav nav-tabs justify-content-center">
-    <li class="nav-item">
-      <a class="nav-link active" href="#" data-value="unprecio">Tarifa un precio</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#" data-value="dosprecios">Tarifa dos precios</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#" data-value="3.0a">Tarifa 3.0a</a>
-    </li>
-  </ul>
-</header>
 <section>
   <div class="container">
     <div class="form__container">
@@ -30,27 +16,15 @@
       <div class="form-group row">
         <label class="col-2 col-form-label">Bebida</label>
         <div class="col-10">
-          <select class="">
-
-          </select>
+          <select class="drink_select"></select>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-2 col-form-label">Acompañamiento</label>
         <div class="col-10">
-          <select class="">
-
-          </select>
+          <select class="complement_select"></select>
         </div>
       </div>
     </div>
   </div>
 </section>
-<footer>
-  <div class="text_company">
-    Finestra ©
-  </div>
-  <div class="text_year">
-    Fecha boda
-  </div>
-</footer>
