--- a/src/resources/styles/_variables.scss
+++ b/src/resources/styles/_variables.scss
@@ -1,4 +1,4 @@
-$color-background-header: rgb(243, 243, 243);
+$color-background-header: rgba(222, 184, 135, .8);
 
 $color-black: rgb(0, 0, 0);
 $color-white: rgb(255, 255, 255);
