--- a/src/views/Header/templates/HeaderView.hbs
+++ b/src/views/Header/templates/HeaderView.hbs
@@ -1,4 +1,9 @@
 <div class="icon"></div>
+<div class="timon">
+  <p>Un barco está más seguro en el puerto, pero para eso no se construyen los barcos</p>
+  <p class="subtitle">Paulo Coelho, Esti y Fran</p>
+  <div class="timon--icon"></div>
+</div>
 <ul class="nav nav-tabs justify-content-center">
   <li class="nav-item">
     <a class="nav-link active" data-value="unprecio">Apunta tu bebida</a>
