--- a/src/resources/styles/_variables.scss
+++ b/src/resources/styles/_variables.scss
@@ -2,3 +2,11 @@ $color-background-header: rgba(222, 184, 135, .8);
 
 $color-black: rgb(0, 0, 0);
 $color-white: rgb(255, 255, 255);
+
+$default-font-family: "Love Ya Like A Sister";
+$default-font-size: 16px;
+
+$secondary-font-family: "Tangerine";
+
+$icon-timon: url("../images/timon.png");
+$icon-logo: url("../images/logo.png");
