--- a/src/resources/styles/blocks/_body.scss
+++ b/src/resources/styles/blocks/_body.scss
@@ -1,6 +1,12 @@
 html, body {
-  font-size: 16px;
+  font-size: $default-font-size;
+  font-family: $default-font-family;
 
   background-size: 100%;
   background-image: url("../images/textura.jpg");
+
+  input {
+    font-size: $default-font-size;
+    font-family: $default-font-family;
+  }
 }
