--- a/src/resources/styles/partials/_select2.scss
+++ b/src/resources/styles/partials/_select2.scss
@@ -12,7 +12,12 @@
     }
   }
 
+  .select2-results__option[aria-selected=true] {
+    background-color: lighten($color-background-header, 15%);
+  }
+
   .select2-results__option--highlighted[aria-selected] {
     background-color: $color-background-header;
+    color: $color-black;
   }
 }
