--- a/src/views/Form/templates/FormView.hbs
+++ b/src/views/Form/templates/FormView.hbs
@@ -2,26 +2,26 @@
   <div class="container">
     <div class="form__container">
       <div class="form-group row">
-        <label class="col-2 col-form-label">Nombre</label>
-        <div class="col-10">
+        <label class="col-4 col-lg-2 col-form-label">Nombre</label>
+        <div class="col-8 col-lg-10">
           <input class="form-control" type="text">
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-2 col-form-label">Apellidos</label>
-        <div class="col-10">
+        <label class="col-4 col-lg-2 col-form-label">Apellidos</label>
+        <div class="col-8 col-lg-10">
           <input class="form-control" type=text"">
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-2 col-form-label">Bebida</label>
-        <div class="col-10">
+        <label class="col-4 col-lg-2 col-form-label">Bebida</label>
+        <div class="col-8 col-lg-10">
           <select class="drink_select"></select>
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-2 col-form-label">Acompañamiento</label>
-        <div class="col-10">
+        <label class="col-4 col-lg-2 col-form-label">Acompañamiento</label>
+        <div class="col-8 col-lg-10">
           <select class="complement_select"></select>
         </div>
       </div>
