Add router and toggle navs on navigate

--- a/src/resources/styles/blocks/_form.scss
+++ b/src/resources/styles/blocks/_form.scss
@@ -3,7 +3,7 @@
   border-radius: 1rem;
   border: double $color-black 1px;
   padding: 5rem 2rem;
-  margin-top: 4rem;
+  margin: 4rem 0 10rem;
 
   .form-group {
 
