--- a/src/views/Header/templates/HeaderView.hbs
+++ b/src/views/Header/templates/HeaderView.hbs
@@ -1,14 +1,16 @@
 <div class="icon"></div>
 <div class="timon">
-  <p>Un barco está más seguro en el puerto, pero para eso no se construyen los barcos</p>
+  <p>Un barco está más seguro en el puerto,</p>
+  <p>pero para eso no se construyen los barcos</p>
+
   <p class="subtitle">Paulo Coelho, Esti y Fran</p>
   <div class="timon--icon"></div>
 </div>
 <ul class="nav nav-tabs justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" data-value="unprecio">Apunta tu bebida</a>
+    <a class="nav-link" data-action="/">Apunta tu bebida</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" data-value="dosprecios">Compara tus gustos</a>
+    <a class="nav-link" data-action="/guests">Compara tus gustos</a>
   </li>
 </ul>
