--- a/src/views/Form/templates/FormView.hbs
+++ b/src/views/Form/templates/FormView.hbs
@@ -4,25 +4,29 @@
       <div class="form-group row">
         <label class="col-4 col-lg-2 col-form-label">Nombre</label>
         <div class="col-8 col-lg-10">
-          <input class="form-control" type="text">
+          <input class="form-control" data-attr="name" type="text">
         </div>
       </div>
       <div class="form-group row">
         <label class="col-4 col-lg-2 col-form-label">Apellidos</label>
         <div class="col-8 col-lg-10">
-          <input class="form-control" type=text"">
+          <input class="form-control" data-attr="surname" type=text"">
         </div>
       </div>
       <div class="form-group row">
         <label class="col-4 col-lg-2 col-form-label">Bebida</label>
         <div class="col-8 col-lg-10">
-          <select class="drink_select"></select>
+          <select class="drink_select">
+            <option></option>
+          </select>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-4 col-lg-2 col-form-label">Acompañamiento</label>
         <div class="col-8 col-lg-10">
-          <select class="complement_select"></select>
+          <select class="complement_select">
+            <option></option>
+          </select>
         </div>
       </div>
     </div>
