--- a/src/views/Form/templates/FormView.hbs
+++ b/src/views/Form/templates/FormView.hbs
@@ -29,6 +29,11 @@
           </select>
         </div>
       </div>
+      <div class="button__container">
+        <button type="button" class="btn btn-primary submit__button">
+          Al abordaje!
+        </button>
+      </div>
     </div>
   </div>
 </section>
