--- a/src/resources/styles/_variables.scss
+++ b/src/resources/styles/_variables.scss
@@ -3,6 +3,8 @@ $color-background-header: rgba(222, 184, 135, .8);
 $color-black: rgb(0, 0, 0);
 $color-white: rgb(255, 255, 255);
 
+$color-error: rgb(217, 83, 79);
+
 $default-font-family: "Love Ya Like A Sister";
 $default-font-size: 16px;
 
