Add wedding date and fix some styles (remove flex)

--- a/src/resources/styles/blocks/_form.scss
+++ b/src/resources/styles/blocks/_form.scss
@@ -6,8 +6,11 @@
   margin: 4rem 0 7rem;
 
   .button__container {
-    display: flex;
-    flex-direction: row-reverse;
+
+    .btn {
+      float: right;
+      margin-top: 1rem;
+    }
   }
 
   .has-danger {
