--- a/src/resources/styles/blocks/_header.scss
+++ b/src/resources/styles/blocks/_header.scss
@@ -9,6 +9,10 @@ header {
     padding-bottom: 3rem;
     text-align: justify;
 
+    p {
+      user-select: none;
+    }
+
     .subtitle {
       font-size: 2rem;
       text-align: right;
