--- a/src/resources/styles/blocks/_section.scss
+++ b/src/resources/styles/blocks/_section.scss
@@ -1,9 +1,17 @@
 section {
 
-  .echarts_container {
-    height: 20rem;
-    margin: 0 auto;
-    margin-top: 2rem;
-    width: 80%;
+  .table,
+  .table th {
+    text-align: center;
+
+    th {
+      background-color: transparentize($color-black, .8);
+      color: $color-white;
+      text-align: center;
+    }
+  }
+
+  td {
+    font-weight: bold;
   }
 }
