--- a/src/resources/styles/blocks/_form.scss
+++ b/src/resources/styles/blocks/_form.scss
@@ -11,6 +11,15 @@
       float: right;
       margin-top: 1rem;
     }
+
+    @include mq($until: lg) {
+      .btn {
+        width: 100%;
+        height: 3rem;
+        margin-top: 2rem;
+        float: none;
+      }
+    }
   }
 
   .has-danger {
