--- a/src/views/Form/templates/FormView.hbs
+++ b/src/views/Form/templates/FormView.hbs
@@ -31,7 +31,10 @@
       </div>
       <div class="button__container">
         <button type="button" class="btn btn-primary submit__button">
-          Al abordaje!
+          <div class="loading-spinner">
+            <div class="loading-spinner__item"></div>
+          </div>
+          <span class="button__text">Al abordaje!</span>
         </button>
       </div>
     </div>
