--- a/src/resources/styles/main.scss
+++ b/src/resources/styles/main.scss
@@ -14,6 +14,7 @@
 
 // Blocks
 @import "blocks/body";
+@import "blocks/comments";
 @import "blocks/header";
 @import "blocks/form";
 @import "blocks/section";
