--- a/src/views/Form/templates/FormView.hbs
+++ b/src/views/Form/templates/FormView.hbs
@@ -1,5 +1,5 @@
 <section>
-  <div class="container">
+  <div class="w-content">
     <div class="form__container">
       <div class="form-group row">
         <label class="col-12 col-lg-2 col-form-label">Nombre</label>
