--- a/src/views/Guests/templates/GuestsView.hbs
+++ b/src/views/Guests/templates/GuestsView.hbs
@@ -1,5 +1,5 @@
 <section>
-  <div class="container">
+  <div class="w-content">
     <div class="form__container">
       <table class="table table-striped">
         <thead>
