--- a/src/views/Header/templates/HeaderView.hbs
+++ b/src/views/Header/templates/HeaderView.hbs
@@ -13,4 +13,7 @@
   <li class="nav-item">
     <a class="nav-link" data-action="/guests">Compara tus gustos</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" data-action="/comments">Comentarios</a>
+  </li>
 </ul>
