--- a/src/resources/styles/blocks/_form.scss
+++ b/src/resources/styles/blocks/_form.scss
@@ -1,4 +1,4 @@
-.form__container {
+.c-content__box {
   background-color: $color-background-header;
   border-radius: 1rem;
   border: double $color-black 1px;
