--- a/src/views/Guests/templates/GuestsView.hbs
+++ b/src/views/Guests/templates/GuestsView.hbs
@@ -1,6 +1,6 @@
 <section>
   <div class="w-content">
-    <div class="form__container">
+    <div class="c-content__box">
       <table class="table table-striped">
         <thead>
           <th>Nombre</th>
