--- a/src/resources/styles/blocks/_body.scss
+++ b/src/resources/styles/blocks/_body.scss
@@ -24,10 +24,12 @@ input,
 
     &:hover {
       background-color: darken($color-background-header, 20%);
+      border-color: 0;
     }
 
     &:focus {
       box-shadow: none;
+      border-color: 0;
     }
   }
 }
