--- a/src/views/Form/templates/FormView.hbs
+++ b/src/views/Form/templates/FormView.hbs
@@ -1,6 +1,6 @@
 <section>
   <div class="w-content">
-    <div class="form__container">
+    <div class="c-content__box">
       <div class="form-group row">
         <label class="col-12 col-lg-2 col-form-label">Nombre</label>
         <div class="col-12 col-lg-10">
@@ -10,7 +10,7 @@
       <div class="form-group row">
         <label class="col-12 col-lg-2 col-form-label">Apellidos</label>
         <div class="col-12 col-lg-10">
-          <input class="form-control" data-attr="surname" type=text"">
+          <input class="form-control" data-attr="surname" type="text">
         </div>
       </div>
       <div class="form-group row">
