A lot of shit to launch to prod

--- a/src/resources/styles/blocks/_footer.scss
+++ b/src/resources/styles/blocks/_footer.scss
@@ -8,11 +8,18 @@ footer {
   position: fixed;
   width: 100%;
 
-  .text_company {
-    float: left;
-  }
+  display: flex;
+  justify-content: space-between;
 
-  .text_year {
-    float: right;
+  // .text_company {
+  //   float: left;
+  // }
+  //
+  // .text_year {
+  //   float: right;
+  // }
+
+  @include mq($until: lg) {
+    font-size: .7rem;
   }
 }
