--- a/src/views/Comments/templates/CommentsView.hbs
+++ b/src/views/Comments/templates/CommentsView.hbs
@@ -3,7 +3,7 @@
     <div class="c-content__box">
       <div class="c-comment__list">
         <div class="c-comment-list__new-comment">
-          <button class="c-comment-list__button js-expand__button">
+          <button class="c-comment-list__button expand__button js-expand__button">
             <div class="toggle__icon">
               <span></span>
               <span></span>
@@ -23,9 +23,6 @@
               </div>
             </div>
             <button type="submit" class="c-comment-list__button c-comment-list__button--submit">
-              <!-- <div class="loading-spinner">
-                <div class="loading-spinner__item"></div>
-              </div> -->
               <span>Enviar!</span>
             </button>
           </form>
