--- a/src/views/Header/templates/HeaderView.hbs
+++ b/src/views/Header/templates/HeaderView.hbs
@@ -1,10 +1,8 @@
-<div class="icon"></div>
 <div class="timon">
-  <p>Un barco está más seguro en el puerto,</p>
-  <p>pero para eso no se construyen los barcos</p>
-
-  <p class="subtitle">Paulo Coelho, Esti y Fran</p>
-  <div class="timon--icon"></div>
+  <div class="icon"></div>
+  <div class="text">
+    <p>Un barco está más seguro en el puerto, pero para eso no se construyen los barcos</p>
+  </div>
 </div>
 <ul class="nav nav-tabs justify-content-center">
   <li class="nav-item">
