--- a/src/resources/styles/blocks/_comments.scss
+++ b/src/resources/styles/blocks/_comments.scss
@@ -20,6 +20,15 @@
   color: $color-black;
 }
 
+.expand__button {
+  margin-right: 1rem;
+  align-self: baseline;
+
+  @include mq($until: lg) {
+    margin: 0;
+  }
+}
+
 .c-comment-list__button--submit {
   margin-top: 1rem;
 }
@@ -37,7 +46,7 @@
   max-height: 0;
 	overflow: hidden;
 
-	transition: all 0.3s;
+	transition: all 0.5s;
 
   &.show {
     max-height: 100vh;
