--- a/src/views/Guests/templates/GuestsView.hbs
+++ b/src/views/Guests/templates/GuestsView.hbs
@@ -1,7 +1,7 @@
 <section>
   <div class="w-content">
     <div class="c-content__box">
-      <table class="table table-striped">
+      <table class="table table-striped table-responsive">
         <thead>
           <th>Nombre</th>
           <th>Bebida</th>
