--- a/src/resources/styles/blocks/_section.scss
+++ b/src/resources/styles/blocks/_section.scss
@@ -1,6 +1,10 @@
 section {
   height: 100vh;
 
+  @include mq($from: xs, $until: md) {
+    background-color: transparentize($color-white, .5);
+  }
+
   .table,
   .table th {
     text-align: center;
