--- a/src/views/Comments/templates/CommentsView.hbs
+++ b/src/views/Comments/templates/CommentsView.hbs
@@ -1,39 +1,38 @@
-<section>
-  <div class="w-content">
-    <div class="c-content__box">
-      <div class="c-comment__list">
-        <div class="c-comment-list__new-comment">
-          <button class="c-comment-list__button expand__button js-expand__button">
-            <div class="toggle__icon">
-              <span></span>
-              <span></span>
-            </div>
-          </button>
-          <form class="c-comment-list-new-comment__form">
-            <div class="form-group row">
-              <label class="col-12 col-lg-2 col-form-label">Autor:</label>
-              <div class="col-12 col-lg-10">
-                <input name="author" class="author__input form-control" type="text" required>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-12 col-lg-2 col-form-label">Escribe tus mejores deseos:</label>
-              <div class="col-12 col-lg-10">
-                <textarea name="comment" class="form-control" rows="8" required></textarea>
-              </div>
-            </div>
-            <button type="submit" class="c-comment-list__button c-comment-list__button--submit">
-              <span>Enviar!</span>
-            </button>
-          </form>
-        </div>
-        {{#each items}}
-          <div class="c-comment-list__comment">
-            <h5 class="c-comment__title">{{ author }}</h5>
-            <p class="c-comment__text">{{ comment }}</p>
+<div class="w-content">
+  <div class="c-content__box">
+    <div class="c-comment__list">
+      <div class="c-comment-list__new-comment">
+        <button class="c-comment-list__button expand__button js-expand__button">
+          <div class="toggle__icon">
+            <span></span>
+            <span></span>
           </div>
-        {{/each}}
+        </button>
+        <form class="c-comment-list-new-comment__form">
+          <div class="form-group row">
+            <label class="col-12 col-lg-2 col-form-label">Autor:</label>
+            <div class="col-12 col-lg-10">
+              <input name="author" class="author__input form-control" type="text" required>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-12 col-lg-2 col-form-label">Escribe tus mejores deseos:</label>
+            <div class="col-12 col-lg-10">
+              <textarea name="comment" class="form-control" rows="8" required></textarea>
+            </div>
+          </div>
+          <button type="submit" class="c-comment-list__button c-comment-list__button--submit">
+            <span>Enviar!</span>
+          </button>
+        </form>
       </div>
+      {{#each items}}
+        <div class="c-comment-list__comment">
+          <h5 class="c-comment__title">{{ author }}</h5>
+          <p class="c-comment__date">{{ created_at }}</p>
+          <p class="c-comment__text">{{ comment }}</p>
+        </div>
+      {{/each}}
     </div>
   </div>
-</section>
+</div>
