Fix bottom margin

--- a/src/resources/styles/blocks/_section.scss
+++ b/src/resources/styles/blocks/_section.scss
@@ -1,5 +1,6 @@
 section {
-  height: 100vh;
+  min-height: 100vh;
+  margin-bottom: 2rem;
 
   @include mq($from: xs, $until: md) {
     background-color: transparentize($color-white, .6);
