--- a/src/resources/styles/blocks/_summary.scss
+++ b/src/resources/styles/blocks/_summary.scss
@@ -2,3 +2,13 @@
 .echarts__complements {
   height: 20rem;
 }
+
+.c-summary {
+  .table {
+    margin-top: 1rem;
+  }
+
+  .c-content__button-group {
+    padding-top: 1rem;
+  }
+}
