--- a/src/resources/styles/blocks/_body.scss
+++ b/src/resources/styles/blocks/_body.scss
@@ -56,5 +56,22 @@ textarea,
       transform: rotate(360deg);
     }
   }
+}
 
+.c-content__button-group {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+
+  @include mq($from: lg) {
+    justify-content: flex-start;
+  }
+
+  .btn {
+    flex: 0 0 100%;
+
+    @include mq($from: lg) {
+      flex-basis: auto;
+    }
+  }
 }
