--- a/src/views/Guests/templates/GuestsView.hbs
+++ b/src/views/Guests/templates/GuestsView.hbs
@@ -1,5 +1,8 @@
 <div class="w-content">
   <div class="c-content__box">
+    <div class="c-content__button-group">
+      <button class="btn btn-primary js-summary-button">Resumen</button>
+    </div>
     <table class="table table-striped table-responsive">
       <thead>
         <th>Nombre</th>
