--- a/src/views/Summary/templates/SummaryView.hbs
+++ b/src/views/Summary/templates/SummaryView.hbs
@@ -1,10 +1,43 @@
 <div class="w-content">
-  <div class="c-content__box">
-    <h3>Bebidas:</h3>
-    <div class="echarts__drinks"></div>
-  </div>
-  <div class="c-content__box">
-    <h3>Complementos:</h3>
-    <div class="echarts__complements"></div>
+  <div class="c-summary">
+    <div class="c-content__box">
+      <div class="c-content__button-group">
+        <button class="btn btn-primary js-change-chart-type-button">Cambiar gráfico</button>
+      </div>
+      <h3>Bebidas:</h3>
+      <div class="echarts__drinks"></div>
+      <table class="table table-striped table-responsive">
+        <thead>
+          <th>Bebida</th>
+          <th>Cantidad</th>
+        </thead>
+        <tbody>
+          {{#each drinks}}
+          <tr>
+            <td>{{ drink }}</td>
+            <td>{{ ammount }}</td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+    <div class="c-content__box">
+      <h3>Complementos:</h3>
+      <div class="echarts__complements"></div>
+      <table class="table table-striped table-responsive">
+        <thead>
+          <th>Complemento</th>
+          <th>Cantidad</th>
+        </thead>
+        <tbody>
+          {{#each complements}}
+          <tr>
+            <td>{{ complement }}</td>
+            <td>{{ ammount }}</td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
